# bili-monitor

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  COOKIE_SERVICE_USAGE.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  EMAIL_SETUP_GUIDE.md  FIX_CONFIG_SAVE_ISSUE.md  FOXMAIL_CONFIG_DONE.md  HTTP_ERROR_FIXES.md  LICENSE  MIGRATION_GUIDE.md  MYSQL_INSTALL_GUIDE.md  MYSQL_MIGRATION_SUMMARY.md  MYSQL_QUICK_REFERENCE.md  MYSQL_SETUP.md  QUICK_EMAIL_SETUP.md  README.md  SQLITE_TO_MYSQL_GUIDE.md  check_cookie.py  check_db_schema.py  check_dynamic_links.py  check_dynamics.py  config.docker.yaml  config.example.yaml  docker-compose.yml  init_mysql.py  main.py  migrate_to_mysql.py  pyproject.toml  requirements.txt  setup_email.py  start_monitor.py  test_all_features.py  test_api_full.py  test_buvid.py  test_database_notification.py  test_email_image.py  (+18 more)
bili_monitor/: monitor.py
bili_monitor/api/: __init__.py  bili_api.py  cookie_manager.py  cookie_service.py
bili_monitor/core/: config.py  logger.py  models.py
bili_monitor/notification/: __init__.py  base.py  dingtalk.py  email.py  telegram.py  wechat.py
bili_monitor/storage/: __init__.py  database.py
bili_monitor/web/: __init__.py  app.py  login.py
bili_monitor_old/: __init__.py
bili_monitor_old/api/: __init__.py  bili_api.py
bili_monitor_old/core/: __init__.py  config.py  models.py
bili_monitor_old/notification/: wechat.py
bili_monitor_old/storage/: database.py
configs/: docker.yaml  example.yaml
docs/: PROJECT_STRUCTURE.md
tests/: __init__.py  conftest.py  test_full.py  test_monitor_run.py
(+43 files in other folders)
