[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bili-monitor"
version = "2.0.0"
description = "B站UP主动态监控系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # HTTP
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Web
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    # Database
    # SQLite is built-in
    # QR Code
    "qrcode[pil]>=7.4",
    # Notification
    # email is built-in
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
bili-monitor = "bili_monitor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bili_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.black]
target-version = ["py310"]
line-length = 120
